<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@android:color/white"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:shadowColor="@android:color/black"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:layout_marginStart="15dp"
        android:shadowColor="@android:color/black"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"/>

    <TextView
        android:id="@+id/willBe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day_night"
        android:textColor="@android:color/white"
        android:layout_marginStart="15dp"
        android:shadowColor="@android:color/black"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/cur_temp"
                android:textSize="60sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feel_temp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/cloud" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/cloud"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow_weath_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_day"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_day_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/sun"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_day_weath_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_day"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_day_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/sun"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_day_weath_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_day"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_day_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/cloud"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_day_weath_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_day"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_day_day_night"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/cloud"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_day_weath_type"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>