<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"/>

        <TextView
            android:id="@+id/willBe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_night"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/cur_temp"
                    android:textSize="60sp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="2"
                    android:shadowDx="2"
                    android:shadowDy="2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feel_temp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="2"
                    android:shadowDx="2"
                    android:shadowDy="2"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/cloud" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_type"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:shadowColor="@android:color/black"
                    android:shadowRadius="2"
                    android:shadowDx="2"
                    android:shadowDy="2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windSpeed"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Скорость ветра:"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:id="@+id/windSpeed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:id="@+id/windSpeed_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="м/с"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Давление:"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:id="@+id/pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="755"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:layout_marginEnd="15dp"
                android:id="@+id/pressure_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="мм рт.ст.	"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="2"
                android:shadowDx="2"
                android:shadowDy="2"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="Прогноз на ближайшие дни:"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:shadowColor="@android:color/black"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_btn"
                android:textSize="10sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info"
                android:textSize="10sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>